# processhacker-mcp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-native.bat  test_compiler_rpc.json  wrapper.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml
extensions/auto_compiler_ext/: AutoCompilerExt.cpp
extensions/builtin_ext/: BuiltinExt.cpp  BuiltinExt.h
extensions/freezer_ext/: FreezerExt.cpp
extensions/memory_patcher_ext/: MemoryPatcherExt.cpp
extensions/pattern_scanner_ext/: PatternScannerExt.cpp
extensions/rtti_dumper_ext/: RttiDumperExt.cpp
extensions/sample_ext/: SampleExt.cpp
extensions/vehbutnot_ext/: Types.h  VehButNot.cpp  VehButNot.h  VehButNotExt.cpp
include/: McpExtensionApi.h  McpServer.h
src/: Main.cpp  McpServer.cpp
